// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportFilter component should render initial state when a selectedEdition has been removed 1`] = `
<div>
  <div
    class="svelte-1k192f9"
    data-testid="overlay"
    style="z-index: 2"
  />
   
  <section
    class="svelte-1ipsz6k"
  >
    <div
      class="selected-edition svelte-1ipsz6k"
    >
      <div
        class="edition-filter svelte-1ipsz6k"
        data-testid="display-modal-button"
      >
        <div
          class=" svelte-1ipsz6k"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
       
    </div>
     
    <div
      class="modal-popup svelte-1ipsz6k"
      style="top: NaNpx;left: undefinedpx"
    >
      <article
        class="svelte-pntwh0"
      >
         
        <section
          class="widget-header svelte-1kld2ef"
        >
          <div
            class="title svelte-1kld2ef"
          >
             
             
            <div
              slot="title"
            >
              <h3>
                Filter by
              </h3>
               
              <div
                class="
    mdc-form-field
    
    
  "
              >
                <div
                  class="mdc-radio"
                >
                  <input
                    class="mdc-radio__native-control "
                    id="SMUI-form-field-4"
                    type="radio"
                    value="Edition"
                  />
                   
                  <div
                    class="mdc-radio__background"
                  >
                    <div
                      class="mdc-radio__outer-circle"
                    />
                     
                    <div
                      class="mdc-radio__inner-circle"
                    />
                  </div>
                </div>
                 
                 
                <label
                  for="SMUI-form-field-4"
                >
                  <span
                    class="svelte-1ipsz6k"
                    slot="label"
                  >
                    Edition
                  </span>
                </label>
              </div>
            </div>
          </div>
           
          <div
            class="actions svelte-1kld2ef"
          >
            <div
              slot="actions"
            >
              <button
                class=" svelte-th9g9"
                data-testid="button"
              >
                Cancel
              </button>
               
              <button
                class="primary svelte-th9g9"
                data-testid="button"
                disabled=""
              >
                Apply
              </button>
            </div>
          </div>
        </section>
         
        <section
          class="widget-body svelte-4p1s5s"
        >
          <div
            class="container svelte-4axnnt"
          >
            <div>
              <h3
                class="svelte-4axnnt"
              >
                Unable to load editions
              </h3>
            </div>
          </div>
          
        </section>
      </article>
    </div>
  </section>
</div>
`;

exports[`ReportFilter component should render the ReportFilter component no selectedEdition 1`] = `
<div>
   
  <section
    class="svelte-1ipsz6k"
  >
    <div
      class="selected-edition svelte-1ipsz6k"
    >
      <div
        class="edition-filter svelte-1ipsz6k"
        data-testid="display-modal-button"
      >
        <div
          class=" svelte-1ipsz6k"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
       
    </div>
     
  </section>
</div>
`;

exports[`ReportFilter component should render the ReportFilter component with a selectedEdition 1`] = `
<div>
   
  <section
    class="svelte-1ipsz6k"
  >
    <div
      class="selected-edition svelte-1ipsz6k"
    >
      <div
        class="edition-filter svelte-1ipsz6k"
        data-testid="display-modal-button"
      >
        <div
          class="active icon-wrapper svelte-1ipsz6k"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          Edition
        </div>
      </div>
       
      <div
        class="clickable svelte-bktgns"
        data-testid="chip"
      >
        <span
          class="label svelte-bktgns"
        >
          Test Event / Test Edition
        </span>
         
        <span
          class="cross svelte-bktgns"
          data-testid="remove-chip-button"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 12px; --icon-height: 12px;"
          >
            <object
              src="ic-delete.svg/"
            />
          </div>
        </span>
      </div>
      
    </div>
     
  </section>
</div>
`;
